[gd_scene load_steps=2 format=3 uid="uid://cqxm8y7n8qkr"]

[ext_resource type="Script" uid="uid://dxp27fxbmc0gk" path="res://scripts/RacingHUD.gd" id="1_0x8qm"]

[node name="RacingHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8qm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0

[node name="SpeedBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="SpeedLabel" type="Label" parent="VBoxContainer/SpeedBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Speed: 0%"
horizontal_alignment = 1

[node name="BoostBar" type="ProgressBar" parent="VBoxContainer"]
modulate = Color(0, 1, 1, 1)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="BoostLabel" type="Label" parent="VBoxContainer/BoostBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Boost: 100%"
horizontal_alignment = 1

[node name="DurabilityBar" type="ProgressBar" parent="VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="DurabilityLabel" type="Label" parent="VBoxContainer/DurabilityBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Hull: 100%"
horizontal_alignment = 1

[node name="TopContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0

[node name="LapLabel" type="Label" parent="TopContainer"]
layout_mode = 2
text = "Lap: 1/3"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="TopContainer"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="TopContainer"]
layout_mode = 2
text = "1st / 4"
horizontal_alignment = 2
